--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <section class="site-title">
             <div class="site-background">
-                <h3>Agency Travel</h3>
+                <h3>Travel Agency</h3>
                 <h1>Conheça o mundo</h1>
             </div>
         </section>  
