--- a/index.html
+++ b/index.html
@@ -67,24 +67,24 @@
                 </div>
               </div>
             <div class="card">
-              <img src="./assets/ft2.jpg" alt="Avatar" />
-              <div class="container">
-                <h4><b>Lugares incríveis</b></h4>
-                <p>De <b>Praga</b></p>
-              </div>
-            </div>
-            <div class="card">
-                <img src="./assets/ft3.jpg" alt="Avatar"  />
+                <img src="./assets/ft2.jpg" alt="Avatar" />
                 <div class="container">
-                  <h4><b>Veja nossos planos</b></h4>
-                  <p>Preços incríveis.</p>
+                  <h4><b>Lugares incríveis em</b></h4>
+                  <p>De Praga</p>
                 </div>
               </div>
             <div class="card">
-                <img src="./assets/ft4.jpg" alt="Avatar"  />
+                <img src="./assets/ft3.jpg" alt="Avatar" />
+                <div class="container">
+                  <h4><b>Veja nossos planos</b></h4>
+                  <p>Preços incríveis!</p>
+                </div>
+              </div>
+            <div class="card">
+                <img src="./assets/ft4.jpg" alt="Avatar" />
                 <div class="container">
                   <h4><b>Pacotes de viagem</b></h4>
-                  <p>Que cabem no bolso</p>
+                  <p>Que cabem no bolso.</p>
                 </div>
               </div>
             
