--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="card">
                 <img src="./assets/ft1.jpg" alt="Avatar" />
                 <div class="container">
-                  <h4><b>Conheça as belezas</b></h4>
-                  <p>De um país nórdico.</p>
+                  <h4><b>Conheça</b></h4>
+                  <p>Berlim</p>
                 </div>
               </div>
             <div class="card">
